@@ -55,6 +55,7 @@
 - im_printlines(), im_debugim() deprecated (use im_vips2csv() instead)
 - callback gtkdocs
 - error gtkdocs
+- removed printlines tool, vips2csv is much better
 
 25/3/09 started 7.18.0
 - revised version numbers
